# energysys_components

./: CITATION.cff  README.md  energy_conversion_classes.py  pyproject.toml  requirements.txt  setup.py
src/energysys_components/: component_definition.py  energy_carrier.py  energy_conversion.py  energy_conversion_classes.py  energy_storage.py  simulation.py
src/energysys_components/components/: H2_Purifier.yaml  cracker.yaml  fuel_cell_PEM.yaml  fuel_cell_SOFC.yaml  thermal_boiler.yaml
src/energysys_components/components_storage/: battery.yaml
src/energysys_components/energycarrier/: energycarrier.yaml
src/energysys_components/example/: component_definition.py  energy_carrier.py  step_action_stationary_test.py  step_action_test.py
src/energysys_components/examples/: 01_component_test.py  02_component_test_stationary.py  Component_Sankey.ipynb  Component_Test_1.ipynb  component_definition.py  example_component_definition.py  example_energy_carrier.py
src/energysys_components/examples/components/: H2_Purifier.yaml  battery.yaml  cracker.yaml  fuel_cell_PEM.yaml  fuel_cell_SOFC.yaml  thermal_boiler.yaml
src/energysys_components/testfunctions/: step_action_cracler_stationary_test.py  step_action_stationary_test.py  step_action_test.py  step_action_test_2.py
src/energysys_components/various/: normalization.py  sankey.py
tests/: Component_Sankey.ipynb  step_action_stationary_test.py  step_action_test.py  test_basic.py  test_timestep_variation.py
various/: normalization.py  sankey.py
